<resources>
    <string name="app_name">MUST Attendance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="POWERED_BY_AI_TECHNOLOGY_CENTER">POWERED BY AI TECHNOLOGY CENTER</string>
    <string name="completeProfile">Complete Profile</string>
    <string name="registerViaYourId">Register via your ID to be able to use smart attendance system.</string>
    <string name="addProfilePic">Add Profile Pic</string>
    <string name="studentId">STUDENT ID</string>
    <string name="password">PASSWORD</string>
    <string name="REGISTER">REGISTER</string>
    <string name="level">Level</string>
    <string name="ATTENDANCE">ATTENDANCE</string>
    <string name="SCHEDULES">SCHEDULES.</string>
    <string name="REPORTS">REPORTS</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="about">About</string>
    <string name="SMART_ATTENDANCE_SYSTEM">SMART ATTENDANCE SYSTEM</string>
    <string name="SUBJECTS">SUBJECTS</string>
    <string name="swipeAside">Swipe aside to change the day!</string>
</resources>
