<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.StudentHome">

   <ScrollView
       android:layout_width="match_parent"
       android:background="#fff"
       android:layout_height="match_parent">
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           >

           <RelativeLayout
               android:id="@+id/relativeLayout"
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:background="@drawable/home_header"
               android:orientation="vertical"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent">

               <de.hdodenhof.circleimageview.CircleImageView
                   android:id="@+id/studentImgId"
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:layout_alignParentBottom="true"
                   android:layout_centerHorizontal="true"
                   app:civ_border_color="#fff"
                   app:civ_border_width="2dp" />
           </RelativeLayout>

           <TextView
               android:id="@+id/textView5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:text="Ahmed El-Nakib"
               android:textColor="#434242"
               android:textSize="24sp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="@+id/relativeLayout"
               app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

           <TextView
               android:id="@+id/textView6"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:text="Computer Science"
               app:layout_constraintEnd_toEndOf="@+id/textView5"
               app:layout_constraintStart_toStartOf="@+id/textView5"
               app:layout_constraintTop_toBottomOf="@+id/textView5" />

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/constraintLayout"
               android:layout_width="match_parent"
               android:layout_height="80dp"
               android:layout_marginTop="24dp"
               app:layout_constraintEnd_toEndOf="@+id/textView6"
               app:layout_constraintStart_toStartOf="@+id/textView6"
               app:layout_constraintTop_toBottomOf="@+id/textView6">


               <TextView
                   android:id="@+id/textView8"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="32dp"
                   android:text="@string/studentId"
                   app:layout_constraintBottom_toTopOf="@+id/textView9"
                   app:layout_constraintEnd_toStartOf="@+id/view"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:id="@+id/textView9"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="16dp"
                   android:text="2220150062"
                   android:textColor="#000"
                   android:textSize="20sp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toStartOf="@+id/view"
                   app:layout_constraintTop_toBottomOf="@+id/textView8" />

               <View
                   android:id="@+id/view"
                   android:layout_width="0.5dp"
                   android:layout_height="0dp"
                   android:layout_marginTop="16dp"
                   android:layout_marginBottom="16dp"
                   android:background="#123"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:id="@+id/textView10"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="32dp"
                   android:text="@string/level"
                   app:layout_constraintBottom_toTopOf="@+id/textView11"
                   app:layout_constraintStart_toEndOf="@+id/view"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:id="@+id/textView11"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="45dp"
                   android:text="4"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintStart_toEndOf="@+id/view"
                   app:layout_constraintTop_toBottomOf="@+id/textView10" />

           </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/buttonConstraint1"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_marginStart="16dp"
               android:layout_marginTop="16dp"
               android:background="@drawable/borderd_shape"
               app:layout_constraintEnd_toStartOf="@+id/schedulesBtnId"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/constraintLayout" >

               <TextView
                   android:id="@+id/textView12"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="8dp"
                   android:text="@string/ATTENDANCE"
                   android:textColor="#000"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView3" />

               <ImageView
                   android:id="@+id/imageView3"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="24dp"
                   android:src="@mipmap/attendance"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

           </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/schedulesBtnId"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_marginTop="16dp"
               android:background="@drawable/borderd_shape"

               app:layout_constraintEnd_toStartOf="@+id/button3"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toEndOf="@+id/buttonConstraint1"
               app:layout_constraintTop_toBottomOf="@+id/constraintLayout" >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="8dp"
                   android:text="@string/SCHEDULES"
                   android:textColor="#000"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView31" />

               <ImageView
                   android:id="@+id/imageView31"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="24dp"
                   android:src="@mipmap/schedules"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />
           </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/button3"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_marginTop="16dp"
               android:layout_marginEnd="16dp"
               android:background="@drawable/borderd_shape"

               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toEndOf="@+id/schedulesBtnId"
               app:layout_constraintTop_toBottomOf="@+id/constraintLayout" >


               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="8dp"
                   android:text="@string/REPORTS"
                   android:textColor="#000"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView321" />

               <ImageView
                   android:id="@+id/imageView321"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="24dp"
                   android:src="@mipmap/reports"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

           </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/button4"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_marginTop="16dp"
               android:layout_marginBottom="8dp"
               android:background="@drawable/borderd_shape"

               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="@+id/buttonConstraint1"
               app:layout_constraintStart_toStartOf="@+id/buttonConstraint1"
               app:layout_constraintTop_toBottomOf="@+id/buttonConstraint1">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="8dp"
                   android:text="@string/notifications"
                   android:textColor="#000"
                   android:textSize="13sp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView3211" />

               <ImageView
                   android:id="@+id/imageView3211"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="24dp"
                   android:src="@mipmap/reports"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

           </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/aboutBtnId"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:background="@drawable/borderd_shape"
               android:layout_marginTop="16dp"
               android:layout_marginBottom="8dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="@+id/schedulesBtnId"
               app:layout_constraintStart_toStartOf="@+id/schedulesBtnId"
               app:layout_constraintTop_toBottomOf="@+id/schedulesBtnId">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="8dp"
                   android:text="@string/about"
                   android:textColor="#000"
                   android:textSize="13sp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView32111" />

               <ImageView
                   android:id="@+id/imageView32111"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="24dp"
                   android:src="@mipmap/reports"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />


           </androidx.constraintlayout.widget.ConstraintLayout>


       </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>


</layout>